--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         lfs: true
     - name: Checkout LFS objects
@@ -22,10 +22,10 @@ jobs:
 
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
 
     - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
@@ -33,8 +33,8 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        docker build -t ghcr.io/ninanor/qn:latest .
+        docker build -t ghcr.io/ninanor/hunngaupejakt:latest .
 
     - name: Push Docker Image
       run: |
-        docker push ghcr.io/ninanor/qn:latest
+        docker push ghcr.io/ninanor/hunngaupejakt:latest
