--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - production
+      - dev
   pull_request:
     branches:
       - production
+      - dev
 
 jobs:
   build:
@@ -26,10 +28,36 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GHCR_PAT }}
 
-    - name: Build Docker Image
+    - name: Build Production Docker Image
       run: |
         docker build -t ghcr.io/ninanor/hunngaupejakt:latest .
 
-    - name: Push Docker Image
+    - name: Push Production Docker Image
       run: |
         docker push ghcr.io/ninanor/hunngaupejakt:latest
+
+  build-dev:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/dev'
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GHCR_PAT }}
+
+    - name: Build Development Docker Image
+      run: |
+        docker build -f Dockerfile.dev -t ghcr.io/ninanor/hunngaupejakt:dev .
+
+    - name: Push Development Docker Image
+      run: |
+        docker push ghcr.io/ninanor/hunngaupejakt:dev
