--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/production'
 
     steps:
     - name: Checkout repository
@@ -56,7 +57,7 @@ jobs:
 
     - name: Build Development Docker Image
       run: |
-        docker build -f Dockerfile.dev -t ghcr.io/ninanor/hunngaupejakt:dev .
+        docker build -f Dockerfile -t ghcr.io/ninanor/hunngaupejakt:dev .
 
     - name: Push Development Docker Image
       run: |
