--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,12 +1,18 @@
 name: Docker Build and Push to GHCR
 
 on:
-  # Combine push and PR triggers with branch conditions
+  # Trigger on pull requests and pushes to specific branches
   pull_request:
     branches: [ production, test ]
   push:
     branches: [ production, test ]
+  # Add workflow dispatch for manual triggers
   workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to build'
+        required: true
+        default: 'test'
 
 jobs:
   docker-build-push:
@@ -29,7 +35,7 @@ jobs:
       - name: Set Docker tag based on branch
         id: set-tag
         run: |
-          if [[ ${{ github.ref }} == 'refs/heads/production' ]]; then
+          if [[ ${{ github.event.inputs.branch || github.ref_name }} == 'production' ]]; then
             echo "TAG=latest" >> $GITHUB_OUTPUT
           else
             echo "TAG=test" >> $GITHUB_OUTPUT
