Only build on pull requests to test or prod

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,8 +4,8 @@ on:
   # Trigger on pull requests and pushes to specific branches
   pull_request:
     branches: [ production, test ]
-  push:
-    branches: [ production, test ]
+  #push:
+  # branches: [ production, test ]
   # Add workflow dispatch for manual triggers
   workflow_dispatch:
     inputs:
